Refactor DecentDB Dart and Java bindings; add JDBC DataSource implementation
- Updated Dart bindings to improve smoke test coverage and utilize high-level API.
- Enhanced Java bindings with a new DecentDBDataSource class for JDBC compatibility.
- Added JdbcCrudExample demonstrating schema creation, CRUD operations, and error handling.
- Introduced comprehensive tests for Node.js bindings, covering various database operations and edge cases.
- Updated documentation for DBeaver connection settings and improved error handling in Dart and Java tests.